@@ -7,7 +7,8 @@ Changes for 1.5:
 
 Changes for 1.4.1:
 
- - improoved UserParameters for Win32 (Eugene)
+ - check timeouted item only after 4*delay seconds (Alexei)
+ - improved UserParameters for Win32 (Eugene)
  - fixed several issues in housekeeper (Alexei) 
  - changed properties of text files in SVN repository (Alexei)
  - removed text "Current node [N]" from node selector (Alexei)
